Commit after popping missing changes.